remove math.clamp for older java version & change enemy attacking system